[gd_scene load_steps=5 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://texturas/costas baralho.jpg" type="Texture" id=3]

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
render_priority = 1
next_pass = SubResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureButton1" type="TextureButton" parent="."]
material = SubResource( 1 )
margin_right = 300.0
margin_bottom = 200.0
texture_normal = ExtResource( 3 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="."]
material = SubResource( 1 )
margin_left = 300.0
margin_right = 600.0
margin_bottom = 200.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="."]
material = SubResource( 1 )
margin_left = 600.0
margin_right = 900.0
margin_bottom = 200.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton4" type="TextureButton" parent="."]
material = SubResource( 1 )
margin_left = 900.0
margin_right = 1200.0
margin_bottom = 200.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton5" type="TextureButton" parent="."]
material = SubResource( 1 )
margin_top = 200.0
margin_right = 300.0
margin_bottom = 400.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton6" type="TextureButton" parent="."]
material = SubResource( 1 )
margin_left = 300.0
margin_top = 200.0
margin_right = 600.0
margin_bottom = 400.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton7" type="TextureButton" parent="."]
material = SubResource( 1 )
margin_left = 600.0
margin_top = 200.0
margin_right = 900.0
margin_bottom = 400.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton8" type="TextureButton" parent="."]
material = SubResource( 1 )
margin_left = 900.0
margin_top = 200.0
margin_right = 1200.0
margin_bottom = 400.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton9" type="TextureButton" parent="."]
material = SubResource( 1 )
margin_top = 400.0
margin_right = 300.0
margin_bottom = 600.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton10" type="TextureButton" parent="."]
material = SubResource( 1 )
margin_left = 300.0
margin_top = 400.0
margin_right = 600.0
margin_bottom = 600.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton11" type="TextureButton" parent="."]
material = SubResource( 1 )
margin_left = 600.0
margin_top = 400.0
margin_right = 900.0
margin_bottom = 600.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton12" type="TextureButton" parent="."]
material = SubResource( 1 )
margin_left = 900.0
margin_top = 400.0
margin_right = 1200.0
margin_bottom = 600.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect1" type="TextureRect" parent="."]
margin_left = 300.0
margin_top = 600.0
margin_right = 420.0
margin_bottom = 720.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 420.0
margin_top = 600.0
margin_right = 540.0
margin_bottom = 720.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 540.0
margin_top = 600.0
margin_right = 660.0
margin_bottom = 720.0
expand = true

[node name="TextureRect4" type="TextureRect" parent="."]
margin_left = 660.0
margin_top = 601.0
margin_right = 780.0
margin_bottom = 721.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="."]
margin_left = 780.0
margin_top = 601.0
margin_right = 900.0
margin_bottom = 721.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 3.0
margin_top = 5.0
margin_right = 13.0
margin_bottom = 19.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 300.0
margin_top = 5.0
margin_right = 309.0
margin_bottom = 19.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "B"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 600.0
margin_top = 5.00003
margin_right = 609.0
margin_bottom = 19.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "C"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 900.0
margin_top = 5.00001
margin_right = 910.0
margin_bottom = 19.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "D"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 3.00002
margin_top = 200.0
margin_right = 12.0
margin_bottom = 214.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="."]
margin_left = 300.0
margin_top = 200.0
margin_right = 309.0
margin_bottom = 214.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "F"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="."]
margin_left = 600.0
margin_top = 200.0
margin_right = 610.0
margin_bottom = 214.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "G"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="."]
margin_left = 900.0
margin_top = 200.0
margin_right = 910.0
margin_bottom = 214.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "H"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="."]
margin_left = 3.00003
margin_top = 400.0
margin_right = 12.0
margin_bottom = 414.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "I"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="."]
margin_left = 300.0
margin_top = 400.0
margin_right = 309.0
margin_bottom = 414.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "J"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="."]
margin_left = 600.0
margin_top = 400.0
margin_right = 609.0
margin_bottom = 414.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "K"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label12" type="Label" parent="."]
margin_left = 900.0
margin_top = 400.0
margin_right = 909.0
margin_bottom = 414.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "L"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureButton1" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="pressed" from="TextureButton5" to="." method="_on_TextureButton5_pressed"]
[connection signal="pressed" from="TextureButton6" to="." method="_on_TextureButton6_pressed"]
[connection signal="pressed" from="TextureButton7" to="." method="_on_TextureButton7_pressed"]
[connection signal="pressed" from="TextureButton8" to="." method="_on_TextureButton8_pressed"]
[connection signal="pressed" from="TextureButton9" to="." method="_on_TextureButton9_pressed"]
[connection signal="pressed" from="TextureButton10" to="." method="_on_TextureButton10_pressed"]
[connection signal="pressed" from="TextureButton11" to="." method="_on_TextureButton11_pressed"]
[connection signal="pressed" from="TextureButton12" to="." method="_on_TextureButton12_pressed"]
